app/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
    controller.autoneg.dev/neg: '{"backend_services":{"80":[{"name":"backend-service","max_rate_per_endpoint":100}]}}'
  creationTimestamp: null
  labels:
    app: nginx-service
  name: nginx-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
# ---
# kind: ServiceExport
# apiVersion: net.gke.io/v1
# metadata:
#   name: nginx-service
#   namespace: default
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: catch-all
# spec:
#   rules:
#   - http:
#       paths:
#       - backend:
#           service:
#             name: nginx-service
#             port:
#               name: http
#         path: /
#         pathType: Prefix
